...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <Button
            android:id="@+id/PermissionsButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="123dp" />
...
