...
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:keepScreenOn="true" />


    <Button
            android:id="@+id/imageButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            app:srcCompat="@android:color/transparent"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="46dp" />
...
